feat: support using V7 Player to preview in the Kaltura resource list